--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.3.0
   shared_preferences: ^2.5.2
   provider: ^6.1.2
   cached_network_image: ^3.2.3
+  audioplayers: ^6.4.0  # Latest stable version
+  http: ^1.3.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
