--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cached_network_image: ^3.2.3
   audioplayers: ^6.4.0  # Latest stable version
   http: ^1.3.0
+  fl_chart: ^0.70.2
 
 
   # The following adds the Cupertino Icons font to your application.
